RESOLVED FIXED51136
Fix assertion in plugins/return-error-from-new-stream-callback-in-full-frame-plugin.html test
https://bugs.webkit.org/show_bug.cgi?id=51136
Summary Fix assertion in plugins/return-error-from-new-stream-callback-in-full-frame-...
Anders Carlsson
Reported 2010-12-15 14:52:20 PST
Fix assertion in plugins/return-error-from-new-stream-callback-in-full-frame-plugin.html test
Attachments
Patch (4.01 KB, patch)
2010-12-15 14:54 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-15 14:54:25 PST
Anders Carlsson
Comment 2 2010-12-15 15:03:31 PST
Note You need to log in before you can comment on or make changes to this bug.