2010-12-15  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Fix assertion in plugins/return-error-from-new-stream-callback-in-full-frame-plugin.html test
        https://bugs.webkit.org/show_bug.cgi?id=51136

        Ensure that a plug-in that has explicitly cancelled the manual stream won't get any more callbacks.

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::PluginControllerProxy):
        (WebKit::PluginControllerProxy::cancelManualStreamLoad):
        (WebKit::PluginControllerProxy::manualStreamDidReceiveResponse):
        (WebKit::PluginControllerProxy::manualStreamDidReceiveData):
        (WebKit::PluginControllerProxy::manualStreamDidFinishLoading):
        (WebKit::PluginControllerProxy::manualStreamDidFail):
        * PluginProcess/PluginControllerProxy.h:

Canonical link: https://commits.webkit.org/64491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74144 268f45cc-cd09-0410-ab3c-d52691b4dbfc